# Spider

./: .gitignore  README.md
CLI/: CMakeLists.txt  Command.hpp  ConnectionManager.hpp  MessageDeserializer.hpp  Sockets.hpp  main.cpp  userInput.cpp  userInput.hpp  zmq.hpp
CLI/include/: Makefile
CLI/lib/tclap-1.2.1/: Makefile  config.status
CLI/lib/tclap-1.2.1/config/: Makefile
CLI/lib/tclap-1.2.1/docs/: Makefile
CLI/lib/tclap-1.2.1/examples/: Makefile  test1  test10  test11  test12  test13  test14  test15  test16  test17  test18  test19  test2  test20  test21  test3  test4  test5  test6  test7  test8  test9
CLI/lib/tclap-1.2.1/examples/.deps/: test20.Po  test21.Po
CLI/lib/tclap-1.2.1/include/tclap/: Makefile
CLI/lib/tclap-1.2.1/msc/: Makefile
CLI/lib/tclap-1.2.1/msc/examples/: Makefile
CLI/lib/tclap-1.2.1/tests/: Makefile
CLI/protobufMessages/: CmdPacket.pb.cc  CmdPacket.pb.h  CmdPacket.proto  Commands.pb.cc  Commands.pb.h  Commands.proto  GetMouselogCommandResponse.pb.cc  GetMouselogCommandResponse.pb.h  ListUUIDSCommandResponse.pb.h  RequestPacket.proto  SpiderCommands.pb.cc  SpiderCommands.pb.h  SpiderEnvelop.pb.cc  SpiderEnvelop.pb.h  SpiderEnvelop.proto  SpiderKeyloggingPayload.pb.cc  SpiderKeyloggingPayload.pb.h  SpiderMouseEvent.pb.cc
Client/: compile_proto.bat
Client/Core/: CommandHandler.hpp  Core.vcxproj  Core.vcxproj.filters  ICommandHandler.hpp  IKeyLogger.hpp  IMessageDeserializer.hpp  ISecurityAgent.hpp  ISpiderCommandHandler.hpp  ISpiderDeamon.hpp  ISpiderEventEmitter.hpp  ISpiderEventListener.hpp  ISpiderEventManager.hpp  ISpiderKeyLogger.hpp  ISpiderMessageDeserializer.hpp  ISpiderNetworkManager.hpp  ISpiderSettings.hpp  ISpiderSocket.hpp  ISpiderSocketPoller.hpp  IWindowsContextAgent.hpp  IWindowsKeyListener.hpp  IWindowsMouseListener.hpp  KeyLogger.hpp  Main.cpp  MessageDeserializer.hpp  ProcessInformation.hpp  SecurityAgent.hpp  ServiceBase.cpp  ServiceBase.h  ServiceInstaller.cpp  ServiceInstaller.h  Spider.Client.sln  SpiderCommandHandler.hpp  SpiderContextChangedEvent.pb.cc  SpiderContextChangedEvent.pb.h  SpiderDeamon.hpp  SpiderDeserialization.hpp  SpiderEventEmitter.hpp  SpiderEventListener.hpp  SpiderEventManager.hpp  SpiderKeyLogger.hpp  (+22 more)
Client/Core/Debug/: Core.ilk  vc140.idb
Client/Core/Debug/Core.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Core.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Client/Core/Proto/: SpiderContextChangedEvent.proto.ok  SpiderEnveloppe.proto.ok  SpiderKeyLoggingPayload.proto.ok  SpiderMouseEvent.proto.ok  SpiderResponse.proto.ok
Server/: CMakeLists.txt  SpiderServer.hpp  main.cpp
Server/BusinessManager/: SpiderBusinessManager.hpp
Server/BusinessModules/: AuthenticationModule.hpp  CommanderModule.hpp  OutputSTDOUTModule.hpp  StoreToDBModule.hpp
Server/Enums/: Cryptography.hpp  SecureSocketType.hpp
Server/Includes/ZeroMQ/: zmq.hpp  zmq_addon.hpp
Server/Interfaces/: ISpiderBusinessManager.hpp  ISpiderBusinessModule.hpp  ISpiderCryptographicAgent.hpp  ISpiderEventEmitter.hpp  ISpiderEventListener.hpp  ISpiderEventManager.hpp  ISpiderNetworkManager.hpp  ISpiderServer.hpp
Server/Interfaces/Database/: ISpiderDatabaseDriver.hpp  ISpiderKeyValueDatabaseDriver.hpp
Server/Interfaces/Event/: ISpiderEventEmitter.hpp  ISpiderEventListener.hpp
Server/Interfaces/Socket/: ISpiderSocket.hpp  ISpiderSocketPoller.hpp
Server/Proto/: CmdPacket.proto.ok  GetKeylogCommandResponse.proto.ok  GetMouselogCommandResponse.proto.ok  ListUUIDSCommandResponse.proto.ok  RequestPacket.proto.ok  SpiderAuthenticationPayload.proto  SpiderAuthorizedPayload.proto  SpiderCommandResponse.proto.ok  SpiderCommands.proto.ok  SpiderEnveloppe.proto  SpiderKeyloggingPayload.proto  SpiderMouseEvent.proto  SpiderMouseEvent.proto.ok  SpiderResponse.proto  test.proto
Server/ProtoEnvelopes/Proto/: CmdPacket.pb.cc  CmdPacket.pb.h  GetKeylogCommandResponse.pb.cc  GetKeylogCommandResponse.pb.h  GetMouselogCommandResponse.pb.cc  ListUUIDSCommandResponse.pb.cc  RequestPacket.pb.cc  RequestPacket.pb.h  SpiderAuthenticationPayload.pb.cc  SpiderAuthenticationPayload.pb.h  SpiderAuthorizedPayload.pb.cc  SpiderAuthorizedPayload.pb.h  SpiderCommandResponse.pb.cc  SpiderCommandResponse.pb.h  SpiderCommands.pb.cc  SpiderCommands.pb.h  SpiderEnveloppe.pb.cc  SpiderEnveloppe.pb.h  SpiderKeyloggingPayload.pb.cc  SpiderKeyloggingPayload.pb.h  SpiderMouseEvent.pb.cc  SpiderMouseEvent.pb.h
Server/Serialization/: SpiderDeserializer.hpp  SpiderSerializer.hpp
Server/SpiderDatabaseDriver/: SpiderTypedRepositoryDriver.hpp
Server/SpiderDatabaseDriver/RedisDriver/: RedisDriver.hpp
Server/SpiderEventManager/: SpiderEventEmitter.hpp  SpiderEventListener.hpp  SpiderEventManager.hpp
Server/SpiderNetworkManager/: AESCryptographicAgent.hpp  RSACryptographicAgent.hpp  SpiderNetworkManager.hpp
Server/SpiderSocket/ZeroMQ/: ZeroMQCommanderSocket.hpp  ZeroMQEventMonitor.hpp  ZeroMQSecureSocket.hpp  ZeroMQSocket.hpp  ZeroMQSocketPoller.hpp
Server/cmake/: Findlibev.cmake
